# nlp2dsl

./: .env.example  .gitattributes  .gitignore  .pfix-test-wrapper.sh  CHANGELOG.md  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  docker-compose.e2e.yml  docker-compose.yml  goal.yaml  metrun-profile.sh  planfile.yaml  prefact.yaml  project.sh  pyproject.toml  pyqual.yaml  run-all-tests.sh  test_code_generation.py
.github/workflows/: examples-docker-e2e.yml  platform-ci.yml
articles/: adaptive-hypernet.md  conceptual-hcm.md  cure-core-hox-v2.md  drm-module-advanced.md  flow-network.md  hilbert-net.md  mvp-automation-platform.md  universal-binary-tensor.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: action_catalog.py  attachment_validation.py  config.py  dsl_validation.py  engine.py  logging_setup.py  main.py  path_resolve.py  schemas.py  step_validator.py  workflow.py  workflow_events.py
backend/app/db/: __init__.py  memory.py  postgres.py
backend/app/routers/: chat.py  settings.py  system.py  testql_compat.py  workflow.py
backend/tests/: conftest.py  test_action_catalog.py  test_attachment_validation.py  test_chat_execute_keywords.py  test_chat_router.py  test_config.py  test_logging.py  test_persistence.py  test_step_validator.py  test_workflow_api.py
docs/: README.md  REFACTOR-PLAN.md  ROADMAP-30-60-90.md  artifacts.md  autonomous-stack.md  doql-dynamic-generation.md  doql-runtimes.md  doql-system-map.md  encoding.md  migration-persistence.md  process-agent.md  reflection-model.md  system-status-examples-01-14.md  validation.md
examples/: EXECUTION_REPORT.md  MISSING_CONFIGURATION.md  README.md  bootstrap.py  code_generation_examples.py  docker-compose.yml  docker-e2e-results.json  example-profiles.yaml  run-all.sh  testql-results.json
examples/01-invoice/: .env.example  Dockerfile  README.md  main.py  run.sh  scenario.py
examples/02-email/: .env.example  Dockerfile  README.md  main.py  run.sh  scenario.py
examples/03-report-and-notify/: .env.example  Dockerfile  README.md  main.py  requirements.txt  run.sh  scenario.py
examples/04-scheduled-report/: .env.example  Dockerfile  README.md  main.py  requirements.txt  run.sh  scenario.py
examples/05-conversation-flow/: .env.example  Dockerfile  README.md  main.py  requirements.txt  run.sh  scenario.py
examples/06-interactive-chat/: main.py  scenario.py
examples/07-email-conversation/: main.py  scenario.py
examples/08-multi-object-benchmark/: main.py  scenario.py
examples/09-execution-smoke/: main.py  scenario.py
examples/10-llm-benchmark/: main.py  scenario.py
examples/11-notify-quality/: main.py  scenario.py
examples/12-ir-show/: main.py  scenario.py
examples/13-autonomous-invoice-stack/: README.md  main.py  scenario.py
examples/15-idempotency-replay/: scenario.py
nlp-service/: Dockerfile  pyproject.toml  requirements.txt
nlp-service/app/: audio_parser.py  code_generator.py  config.py  logging_setup.py  main.py  mapper.py  orchestrator.py  parser_llm.py  parser_rules.py  registry.py  request_context.py  schemas.py  settings.py  system_executor.py
nlp-service/static/: chat.html  manifest.json
nlp-service/tests/: conftest.py  test_attachment_validation.py  test_autonomous_loop.py  test_doql_attachment.py  test_doql_autofill.py  test_doql_context.py  test_doql_registry.py  test_execution_delegate.py  test_intent_normalize.py  test_mapper.py  test_orchestrator.py  test_parser_rules.py  test_path_policy.py  test_path_resolve.py  test_process_agent.py  test_registry.py  test_registry_observe.py  test_step_validator.py  test_store.py  test_system_executor.py  test_system_map_scope.py
nlp2dsl_sdk/: __init__.py  __main__.py  artifact_layout.py  artifacts.py  attachment_validation.py  autonomous_flow.py  client.py  compose_generator.py  conversation_artifacts.py  conversation_testql.py  demos.py  doql_context.py  doql_registry.py  encoding.py  example_bootstrap.py  example_loader.py  invoice_pdf.py  invoice_policy.py  path_resolve.py  preview.py  process_policy.py  reflection.py  stack_flow.py  step_validation.py  system_map_bridge.py  system_map_generator.py  system_map_ir.py  system_map_models.py  system_map_render.py  system_map_runtimes.py
nlp2dsl_sdk/contracts/: __init__.py  action.py  draft.py  registry.py
nlp2dsl_sdk/doql/: __init__.py  context_blocks.py  models.py  parse.py  render.py  runtime.py
nlp2dsl_sdk/export/: __init__.py  markpact.py  pactown.py  publish.py
nlp2dsl_sdk/validation/: issue.py  (+9 more)
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
scripts/: _conversation_scenario.py  _dotenv.py  _ensure_nlp2dsl_sdk.sh  aggregate-example-testql.py  bootstrap-venv.sh  install-local-deps.sh  run-conversation-scenario.py  run-example-docker-e2e.py  run-example-testql-results.py  run-execution-scenario.py  setup-dev.sh
tauri-wrapper/: .gitignore  README.md  desktop.sh  package-lock.json  package.json
tauri-wrapper/src-tauri/: Cargo.toml  tauri.conf.json
testql-scenarios/: generated-examples.testql.toon.yaml
tests/: conftest.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  test_artifact_layout.py  test_attachment_validation.py  test_compose_generator.py  test_conversation_testql.py  test_doql_context.py  test_doql_registry.py  test_encoding.py  test_invoice_pdf.py  test_invoice_policy.py  test_nlp2dsl_sdk.py  test_path_resolve.py  test_process_policy.py  test_profile_validations.py  test_reflection.py  test_system_map_ir.py  test_tests.py  test_validation.py
tests/e2e/: conftest.py  test_backend.py  test_chat_ui.py  test_nlp_service.py  test_websocket.py
tests/tests/: test_nlp2dsl_tests.py
worker/: Dockerfile  __init__.py  action_catalog.py  attachment_validation.py  config.py  logging_setup.py  path_resolve.py  pyproject.toml  registry.py  requirements.txt  step_validator.py  worker.py
(+69 files in other folders)
