[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp2dsl"
version = "0.0.29"
description = "Reusable Python SDK for the NLP2DSL platform"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
goal = [
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.urls]
Homepage = "https://github.com/wronai/nlp2dsl"

[project.scripts]
nlp2dsl = "nlp2dsl_sdk.cli:main"
nlp2dsl-demo = "nlp2dsl_sdk.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["e2e", ".git", ".venv"]
addopts = ["--import-mode=importlib", "-v", "--tb=no"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.setuptools]
packages = ["nlp2dsl_sdk", "nlp2dsl_sdk.validation", "nlp2dsl_sdk.validation.rules", "nlp2dsl_sdk.doql"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
