[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp2dsl"
version = "0.0.40"
description = "Reusable Python SDK for the NLP2DSL platform"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "env2llm>=0.1.0",
    "dsl-contracts>=0.1.0",
    "workflow-export>=0.1.0",
    "nlp2dsl-stack>=0.1.0",
    "testql-conversations>=0.1.0",
    "nlp2dsl-artifacts>=0.1.0",
    "dsl-validate>=0.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[tool.uv.sources]
env2llm = { path = "../../semcod/env2llm", editable = true }
dsl-contracts = { path = "packages/dsl-contracts", editable = true }
workflow-export = { path = "packages/workflow-export", editable = true }
nlp2dsl-stack = { path = "packages/nlp2dsl-stack", editable = true }
testql-conversations = { path = "packages/testql-conversations", editable = true }
nlp2dsl-artifacts = { path = "packages/nlp2dsl-artifacts", editable = true }
dsl-validate = { path = "packages/dsl-validate", editable = true }

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
goal = [
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[tool.uv]
default-groups = ["test"]

[project.urls]
Homepage = "https://github.com/wronai/nlp2dsl"

[project.scripts]
nlp2dsl = "nlp2dsl_sdk.cli:main"
nlp2dsl-demo = "nlp2dsl_sdk.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["e2e", ".git", ".venv"]
addopts = ["--import-mode=importlib", "-v", "--tb=no"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.setuptools]
packages = [
    "nlp2dsl_sdk",
    "nlp2dsl_sdk.workflow",
    "nlp2dsl_sdk.evaluation",
    "nlp2dsl_sdk.mullm",
    "nlp2dsl_sdk.deploy",
]

[tool.setuptools.package-data]
"nlp2dsl_sdk.evaluation" = ["data/*.yaml"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
